aws/security_group.tf
resource "aws_security_group" "default" {
  name = "default_sg"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
